[package]
name = "cargo-search2"
description = "cargo search, optimized for CI caching in GitHub Actions and elsewhere"
version = "0.0.4"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sunshowers/cargo-search2"
readme = "README.md"
keywords = [
    "cargo",
    "crates-io",
]
categories = [
    "development-tools::cargo-plugins",
]

[dependencies]
cfg-if = "1.0.0"
color-eyre = "0.5.11"
crates-index = "0.17.0"
semver = { version = "1.0.4", features = ["serde"] }
structopt = "0.3.23"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
blake2b_simd = "0.5.11"
